@@ -1,3 +1,7 @@
+25/11/2017:
+	- Added missing RED, GREEN and BLUE colormap implementations to Transforms.cc
+
+
 24/11/2017:
 	- Added input validation for SPECTRA, PFL and MINMAX commands to avoid
 	  possible access to unmapped memory - thanks to John Heasman at DocuSign.
